[package]
name = "radar"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"