[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {  version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mock_instant = "0.5.1"
