[package]
name = "axum-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde_json = "1.0.145"
tokio-stream = "0.1.17"
thiserror = "2.0.17"
displaydoc = "0.2.5"
async-openai = "0.30.1"
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest-eventsource = "0.6.0"
tower-sessions = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.13.0"
