[package]
name = "pony-pwd"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8.6"
anyhow = "1.0.100"
rmcp = { version = "0.8.5", features = ["default", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.1.0"
