[package]
name = "rig-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rig-core = "0.23.1"
thiserror = "2.0.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
schemars = "1.1.0"
